:bug: (CSS): Fix nav link jump
Keep section of nav bar when jump by nav link

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,3 @@
-
 @import url('https://preline.co/assets/css/main.min.css');
 
 @import "tailwindcss";
@@ -19,4 +18,10 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+    position: relative;
+    padding-top: 5rem; /* Adjust this value to match the height of your navbar */
+    margin-top: -5rem; /* Same value as padding-top */
 }
